--- a/dsda_client/config/player_aliases_partial.yaml
+++ b/dsda_client/config/player_aliases_partial.yaml
@@ -55,12 +55,14 @@ Mickael Girard:
     - MG86
 Adam Hegyi:
     - AdamH
-Hi Jango:
-    - chewy
-JC:
-    - JCD
 William Huber:
     - "[WH]-Wilou84"
+Hi Jango:
+    - chewy
+j4rio:
+    - jario
+JC:
+    - JCD
 Jordo:
     - DrJordo
 Andy Kempling:
@@ -82,6 +84,8 @@ Daniel Lindgren:
     - Demonlord
 Ling:
     - Lingyan203
+Looper:
+    - Paska
 Brian Martin:
     - Gurlugon
 Andrew Martinez:
