Add new player aliases and commit full player aliases file to GitHub

--- a/dsda_client/config/player_aliases_partial.yaml
+++ b/dsda_client/config/player_aliases_partial.yaml
@@ -14,6 +14,8 @@ Andrew Bassett:
     - Andrewb
 Selim Benabdelkhalek:
     - Bastard
+Gene Bird:
+    - Searcher
 Bloodite Krypto:
     - BlooditeKrypto
 Zvonimir Bužanić:
@@ -60,9 +62,12 @@ William Huber:
 Hi Jango:
     - chewy
 j4rio:
+    - Armane15
     - jario
 JC:
     - JCD
+Jezs:
+    - Jezs_
 Jordo:
     - DrJordo
 Andy Kempling:
@@ -86,6 +91,7 @@ Ling:
     - Lingyan203
 Looper:
     - Paska
+    - Mittarimato
 Brian Martin:
     - Gurlugon
 Andrew Martinez:
@@ -103,7 +109,9 @@ Radek Pecka:
 Huy Pham:
     - Doom Marine
 Thomas Pilger:
-    - Panter
+    - PanterD2S
+Jakub Puk:
+    - Huncd6814
 Mike Reid:
     - prower
 rodster:
@@ -135,6 +143,7 @@ William Striegl:
     - crate3333
 Spectre01:
     - rileymartin
+    - thisisjimmy12
 stx-Vile:
     - Drew DeVore
 SuperWeaponDude:
@@ -145,6 +154,9 @@ The Green Herring:
     - TGH
 Mark Thompson:
     - Pugsley
+TimeOfDeath:
+    - eternal slumber
+    - TimeOfDeath666
 Twister:
     - mr.twister
 Steffen Udluft:
@@ -153,6 +165,8 @@ Marko van der Want:
     - Python
 Laszlo Vecsei:
     - Waldon
+veovis:
+    - veovisRC
 Mike Watson:
     - Cyb
 Adam Williamson:
