New features and aliases (see changelog)

--- a/dsda_client/config/player_aliases_full.yaml
+++ b/dsda_client/config/player_aliases_full.yaml
@@ -133,6 +133,8 @@ eLim:
     - eLimzke
     - eLim2g
     - Connor O'Leary
+ELMLE:
+    - elmle1
 Espi:
     - Esa Repo
 Ethh:
@@ -262,6 +264,7 @@ Never_Again:
 Alexander Nikulin:
     - jongo
     - anpdad
+    - abyrvalg
 Nine Inch Heels:
     - Sure Bowb
 Ocelot:
@@ -287,6 +290,8 @@ RamboBones:
     - Adrian Danis
 Rayzik:
     - RayziikSenpai
+rdwpa:
+    - r rdrdrdrrr
 Mike Reid:
     - prower
 Relic:
@@ -326,6 +331,8 @@ Natalya Shilyaeva:
 Skepticist:
     - Monakhov Vladimir
     - skepticist87
+Henning Skogsto:
+    - skogsto09
 Slade:
     - Laszlo Gere
 Arno Slagboom:
